yaml/templates/template2/Ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    athena-regex: (/|$)(.*)
    athena-regex-replace: /
  labels:
    lab: example    
spec:
  rules:
  - host: athena.err0r.stream
    http:
      paths:
      - path: /example/ubuntu/vnc(/|$)(.*)
        backend:
          serviceName: ubuntu-vnc
          servicePort: 80
      - path: /example/ubuntu/vnc/websockify
        backend:
          serviceName: ubuntu-no-publish
          servicePort: 5900
      - path: /example/ubuntu/tty(/|$)(.*)
        backend:
          serviceName: ubuntu-tty
          servicePort: 8080
      - path: /example/kali/vnc(/|$)(.*)
        backend:
          serviceName: kali-vnc
          servicePort: 80
      - path: /example/kali/vnc/websockify
        backend:
          serviceName: kali-no-publish
          servicePort: 5900
      - path: /example/kali/tty(/|$)(.*)
        backend:
          serviceName: kali-tty
          servicePort: 8080
  tls:
    - hosts:
      - athena.err0r.stream
      secretName: athena
